panels and about pages

--- a/html/about-ch.html
+++ b/html/about-ch.html
@@ -63,7 +63,7 @@
         </a>
       </div> -->
       <div class="col-6 right-txt no-padding">
-        <a href="/home">
+        <a href="/about">
           <div class="option" id="lang">
             <i class="icofont icofont-globe"></i><br/>
             <span class="hover-text">English</span>
@@ -95,7 +95,7 @@
           <div class="col-5 right-txt">
             <div class="right-txt" style="float:right;">
               <div class="nav-custom-item right-txt">
-                <a href="/home">
+                <a href="/about">
                   <i class="icofont icofont-globe"></i>
                    English
                 </a>
@@ -121,7 +121,7 @@
             <i class="icofont icofont-dotted-right"></i></a>
           </div>
           <div class="col-3 no-padding right-txt">
-            <a href="/home">
+            <a href="/about">
             <i class="icofont icofont-globe"></i>
             English
             </a>
