--- a/html/about.html
+++ b/html/about.html
@@ -52,10 +52,12 @@
         </a>
       </div> -->
       <div class="col-6 right-txt no-padding">
-        <a href="./home-ch.html">
+        <a href="/about-ch">
           <div class="option" id="lang">
-            <i class="icofont icofont-globe"></i><br/>
-            <span class="hover-text">中文</span>
+            <a href="/about-ch">
+              <i class="icofont icofont-globe"></i><br/>
+              <span class="hover-text">中文</span>
+            </a>
           </div>
         </a>
       </div>
@@ -84,7 +86,7 @@
           <div class="col-5 right-txt">
             <div class="right-txt" style="float:right;">
               <div class="nav-custom-item right-txt">
-                <a href="./home-ch.html">
+                <a href="/about-ch">
                   <i class="icofont icofont-globe"></i>
                    简体中文
                 </a>
@@ -94,8 +96,10 @@
                 MENU
               </div>
               <div class="nav-custom-item right-txt register-item">
-                REGISTER
-                <i class="icofont icofont-dotted-right"></i>
+                <a href="https://whartonchinasummit.ticketleap.com/">
+                  REGISTER
+                  <i class="icofont icofont-dotted-right"></i>
+                </a>
               </div>
             </div>
           </div>
@@ -104,12 +108,16 @@
       <div class="container mobile-only">
         <div class="row height-100">
           <div class="col-5 register-item">
-            REGISTER
-            <i class="icofont icofont-dotted-right"></i>
+            <a href="https://whartonchinasummit.ticketleap.com/">
+              REGISTER
+              <i class="icofont icofont-dotted-right"></i>
+            </a>
           </div>
           <div class="col-3 no-padding right-txt">
-            <i class="icofont icofont-globe"></i>
-            中文
+            <a href="/about-ch">
+              <i class="icofont icofont-globe"></i>
+              中文
+            </a>
           </div>
           <div class="col-4 no-padding center-txt" id="m-alt-nav-btn">
             <i class="icofont icofont-navigation-menu"></i>
@@ -126,44 +134,44 @@
       <div class="vertical-center mobile-hide">
         <div class="row center-txt">
           <div class="col-12">
-            <a href="#"><div class="navigation-action-btn">Register</div></a>
+            <a href="https://whartonchinasummit.ticketleap.com/"><div class="navigation-action-btn">Register</div></a>
           </div>
         </div>
         <div class="row">
           <div class="col-12 col-md-12 row menu-items">
-            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-0"> <a href="./home.html">Home</a></div>
-            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item active-item" id="item-4"> <a class="active-item" href="./about.html">About</a> <i class="icofont icofont-dotted-left"></i> </div>
-            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-1"> <a href="./panels.html">Panels</a> </div>
-            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-2"> <a href="./panels.html">Speakers</a> </div>
-            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-3"> <a href="./agenda.html">Agenda</a> </div>
-            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-3"> <a href="./past.html">Past</a> </div>
+            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-0"> <a href="/home">Home</a></div>
+            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item active-item" id="item-4"> <a class="active-item" href="/about">About</a> <i class="icofont icofont-dotted-left"></i> </div>
+            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-1"> <a href="/panels">Panels</a> </div>
+            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-2"> <a href="/panels">Speakers</a> </div>
+            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-3"> <a href="/agenda">Agenda</a> </div>
+            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-3"> <a href="/past">Past</a> </div>
           </div>
         </div>
         <div class="row center-txt">
           <div class="col-4 offset-2 col-md-2 offset-md-2 center-txt">
             <div class="nav-social-item center-txt">
-              <a href="https://www.hotmail.com">
+              <a href="https://www.facebook.com/whartonPWCS">
                 <i class="icofont icofont-social-facebook"></i>
               </a>
             </div>
           </div>
           <div class="col-4 col-md-2 center-txt">
             <div class="nav-social-item center-txt">
-              <a href="https://www.hotmail.com">
+              <a href="../assets/images/wechat-code.jpeg">
                 <i class="icofont icofont-social-wechat"></i>
               </a>
             </div>
           </div>
           <div class="col-4 offset-2 col-md-2 offset-md-0 center-txt">
             <div class="nav-social-item center-txt">
-              <a href="https://www.hotmail.com">
+              <a href="https://weibo.com/whartonchinasummit">
                 <i class="icofont icofont-social-weibo"></i>
               </a>
             </div>
           </div>
           <div class="col-4 col-md-2 center-txt">
             <div class="nav-social-item center-txt">
-              <a href="https://www.hotmail.com">
+              <a href="mailto:official@whartonsummit.org">
                 <i class="icofont icofont-email"></i>
               </a>
             </div>
@@ -178,13 +186,13 @@
         </div>
         <div class="row">
           <div class="col-12 col-md-12 row menu-items center-txt">
-            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-0"> <a href="./home.html">Home</a></div>
-            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item active-item" id="item-4"> <a class="active-item" href="./about.html">About</a> <i class="icofont icofont-dotted-left"></i> </div>
-            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-1"> <a href="./panels.html">Panels</a> </div>
-            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-2"> <a href="./panels.html">Speakers</a> </div>
-            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-3"> <a href="./agenda.html">Agenda</a> </div>
-            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-3"> <a href="./past.html">Past</a> </div>
-            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-6"> <a href="./past.html">Register</a> </div>
+            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-0"> <a href="/home">Home</a></div>
+            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item active-item" id="item-4"> <a class="active-item" href="/about">About</a> <i class="icofont icofont-dotted-left"></i> </div>
+            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-1"> <a href="/panels">Panels</a> </div>
+            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-2"> <a href="/panels">Speakers</a> </div>
+            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-3"> <a href="/agenda">Agenda</a> </div>
+            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-3"> <a href="/past">Past</a> </div>
+            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-6"> <a href="https://whartonchinasummit.ticketleap.com/">Register</a> </div>
           </div>
         </div>
         <div class="row hide" id="m-close-nav">
@@ -223,7 +231,7 @@
         <div class="row">
           <div class="col-10 white-txt crimson-bg ls-1" style="letter-spacing: 3px;">REGISTER</div>
           <div class="col-2 white-bg action-area">
-            <a href="#section-temp" class="black-txt"><i class="icofont icofont-dotted-right"></i></a>
+            <a href="https://whartonchinasummit.ticketleap.com/" class="black-txt"><i class="icofont icofont-dotted-right"></i></a>
           </div>
         </div>
       </div>
@@ -404,9 +412,8 @@
         <h4>Zhilei Zheng</h4>
         <h5>Technology Director</h5>
         <div class="links">
-          <a href=""><i class="icofont icofont-social-linkedin"></i></a>&nbsp;
-          <a href=""><i class="icofont icofont-social-facebook"></i></a>&nbsp;
-          <a href=""><i class="icofont icofont-link-alt"></i></a>
+          <a href="https://www.linkedin.com/in/zhileiz/"><i class="icofont icofont-social-linkedin"></i></a>&nbsp;
+          <a href="http://www.zhileiz.com/"><i class="icofont icofont-link-alt"></i></a>
         </div>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
