--- a/html/panels-ch.html
+++ b/html/panels-ch.html
@@ -33,7 +33,7 @@
       gtag('js', new Date());
       gtag('config', 'UA-108713232-1');
     </script>
-    <title>PWCS 2018 | Speakers</title>
+    <title>PWCS 2018 | Panels</title>
   </head>
   <body>
 
@@ -53,17 +53,17 @@
         </a>
       </div> -->
       <div class="col-6 right-txt no-padding">
-        <a href="./home-ch.html">
+        <a href="/panels">
           <div class="option" id="lang">
             <i class="icofont icofont-globe"></i><br/>
-            <span class="hover-text">中文</span>
+            <span class="hover-text">English</span>
           </div>
         </a>
       </div>
       <div class="col-6 right-txt no-padding">
         <div class="option" id="nav">
           <i class="icofont icofont-navigation-menu"></i><br/>
-          <span class="hover-text">Menu</span>
+          <span class="hover-text">菜单</span>
         </div>
       </div>
     </div>
@@ -85,18 +85,20 @@
           <div class="col-5 right-txt">
             <div class="right-txt" style="float:right;">
               <div class="nav-custom-item right-txt">
-                <a href="./home-ch.html">
+                <a href="/panels">
                   <i class="icofont icofont-globe"></i>
-                   简体中文
+                   English
                 </a>
               </div>
               <div class="nav-custom-item right-txt" id="alt-nav-btn">
                 <i class="icofont icofont-navigation-menu"></i>
-                MENU
+                菜单
               </div>
               <div class="nav-custom-item right-txt register-item">
-                REGISTER
-                <i class="icofont icofont-dotted-right"></i>
+                <a href="https://whartonchinasummit.ticketleap.com/">
+                  立即订票
+                  <i class="icofont icofont-dotted-right"></i>
+                </a>
               </div>
             </div>
           </div>
@@ -105,16 +107,20 @@
       <div class="container mobile-only">
         <div class="row height-100">
           <div class="col-5 register-item">
-            REGISTER
-            <i class="icofont icofont-dotted-right"></i>
+            <a href="https://whartonchinasummit.ticketleap.com/">
+              立即订票
+              <i class="icofont icofont-dotted-right"></i>
+            </a>
           </div>
           <div class="col-3 no-padding right-txt">
-            <i class="icofont icofont-globe"></i>
-            中文
+            <a href="/panels">
+              <i class="icofont icofont-globe"></i>
+              English
+            </a>
           </div>
           <div class="col-4 no-padding center-txt" id="m-alt-nav-btn">
             <i class="icofont icofont-navigation-menu"></i>
-            Menu
+            菜单
           </div>
         </div>
       </div>
@@ -127,44 +133,44 @@
       <div class="vertical-center mobile-hide">
         <div class="row center-txt">
           <div class="col-12">
-            <a href="#"><div class="navigation-action-btn">Register</div></a>
+            <a href="https://whartonchinasummit.ticketleap.com/"><div class="navigation-action-btn">立即订票</div></a>
           </div>
         </div>
         <div class="row">
           <div class="col-12 col-md-12 row menu-items">
-            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-0"> <a href="./home.html">Home</a> </div>
-            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-4"> <a href="./about.html">About</a> </div>
-            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item active-item" id="item-1"> <a class="active-item" href="./panels.html">Panels</a> <i class="icofont icofont-dotted-left"></i> </div>
-            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-2"> <a href="./panels.html">Speakers</a> </div>
-            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-3"> <a href="./agenda.html">Agenda</a> </div>
-            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-3"> <a href="./past.html">Past</a> </div>
+            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-0"> <a href="/home-ch">峰会主页</a> </div>
+            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-4"> <a href="/about-ch">关于我们</a> </div>
+            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item active-item" id="item-1"> <a class="active-item" href="/panels-ch">论坛板块</a> <i class="icofont icofont-dotted-left"></i> </div>
+            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-2"> <a href="/panels-ch">参会嘉宾</a> </div>
+            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-3"> <a href="/agenda-ch">峰会日程</a> </div>
+            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-3"> <a href="/past-ch">往届峰会</a> </div>
           </div>
         </div>
         <div class="row center-txt">
           <div class="col-4 offset-2 col-md-2 offset-md-2 center-txt">
             <div class="nav-social-item center-txt">
-              <a href="https://www.hotmail.com">
+              <a href="https://www.facebook.com/whartonPWCS">
                 <i class="icofont icofont-social-facebook"></i>
               </a>
             </div>
           </div>
           <div class="col-4 col-md-2 center-txt">
             <div class="nav-social-item center-txt">
-              <a href="https://www.hotmail.com">
+              <a href="../assets/images/wechat-code.jpeg">
                 <i class="icofont icofont-social-wechat"></i>
               </a>
             </div>
           </div>
           <div class="col-4 offset-2 col-md-2 offset-md-0 center-txt">
             <div class="nav-social-item center-txt">
-              <a href="https://www.hotmail.com">
+              <a href="https://weibo.com/whartonchinasummit">
                 <i class="icofont icofont-social-weibo"></i>
               </a>
             </div>
           </div>
           <div class="col-4 col-md-2 center-txt">
             <div class="nav-social-item center-txt">
-              <a href="https://www.hotmail.com">
+              <a href="mailto:official@whartonsummit.org">
                 <i class="icofont icofont-email"></i>
               </a>
             </div>
@@ -174,18 +180,18 @@
       <div class="verticl-center mobile-only">
         <div class="row">
           <div class="col-12 center-txt m-menu-title">
-            MENU
+            菜单
           </div>
         </div>
         <div class="row">
           <div class="col-12 col-md-12 row menu-items center-txt">
-            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-0"> <a href="./home.html">Home</a> </div>
-            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-4"> <a href="./about.html">About</a> </div>
-            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item active-item" id="item-1"> <a class="active-item" href="./panels.html">Panels</a> <i class="icofont icofont-dotted-left"></i> </div>
-            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-2"> <a href="./panels.html">Speakers</a> </div>
-            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-3"> <a href="./agenda.html">Agenda</a> </div>
-            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-3"> <a href="./past.html">Past</a> </div>
-            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-6"> <a href="./past.html">Register</a> </div>
+            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-0"> <a href="/home-ch">峰会首页</a> </div>
+            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-4"> <a href="/about-ch">关于我们</a> </div>
+            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item active-item" id="item-1"> <a class="active-item" href="/panels-ch">论坛版块</a> <i class="icofont icofont-dotted-left"></i> </div>
+            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-2"> <a href="/panels-ch">参会嘉宾</a> </div>
+            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-3"> <a href="/agend-ch">峰会日程</a> </div>
+            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-3"> <a href="/past-ch">往届峰会</a> </div>
+            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-6"> <a href="https://whartonchinasummit.ticketleap.com/">立即订票</a> </div>
           </div>
         </div>
         <div class="row hide" id="m-close-nav">
@@ -214,19 +220,19 @@
       <div class="left-square"></div>
       <div class="sub-title">4月13日-15日<br/>宾夕法尼亚大学</div>
       <div class="vertical-sub-title mobile-hide">
-        A Summit that builds the bridge between us
+        让我们一起构筑中美交流的桥梁
       </div>
       <div class="vertical-sub-title mobile-only">
-        To Build the Bridge Between Us
+        构筑中美交流的桥梁
       </div>
       <div class="page-caption black-shadow">
          六大 <br/> 分论坛
       </div>
       <div class="bottom-square">
         <div class="row">
-          <div class="col-10 white-txt crimson-bg ls-1" style="letter-spacing: 3px;">REGISTER</div>
+          <div class="col-10 white-txt crimson-bg ls-1" style="letter-spacing: 3px;">立即订票</div>
           <div class="col-2 white-bg action-area">
-            <a href="#section-temp" class="black-txt"><i class="icofont icofont-dotted-right"></i></a>
+            <a href="https://whartonchinasummit.ticketleap.com/" class="black-txt"><i class="icofont icofont-dotted-right"></i></a>
           </div>
         </div>
       </div>
@@ -319,7 +325,7 @@
         </div>
 
         <!-- Second Panel -->
-        <div class="row panel-row" id="fourth-panel">
+        <div class="row panel-row" id="second-panel">
           <div class="col-md-6 col-sm-12">
             <div class="row">
               <div class="col">
